--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,6 +4,11 @@ body {
   background-color: #337ab7;
 }
 
+.alternate{
+  color: white;
+  padding-left: 3%;
+}
+
 header a,
 footer a {
   color: white;
